# shotgun-debugger

./: .appveyor.yml  .astylerc  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog.txt  Info.plist  LICENSE.md  Makefile  README.md  Shotgun_Debugger_Mac_Prefix.pch  bitmapfont.h  enemies.cpp  enemies.h  game.cpp  input.cpp  interface.h  level.h  levelobjects.cpp  main.cpp  md2.cpp  models.h  objects.h  player.cpp  sdb.h  sdb_icon.icns  weapons.cpp  weapons.h
English.lproj/: InfoPlist.strings
Resources/levels/: level1.vl  level2.vl  level6.vl
Resources/models/: armeddrone.md2  barrel.md2  player_legs.md2  player_torso.md2  turret.md2  unarmedguard.md2  zero.md2
Shotgun Debugger Mac.xcodeproj/: project.pbxproj
include/: bitmapfont.h  byteswap.h  camera.h  enemies.h  input.h  interface.h  level.h  levelobjects.h  md2.h  models.h  objects.h  player.h  sdb.h  weapons.h
levels-src/: README  object_table.txt  svg2vl
res/levels/: level3.vl  level4.vl  level5.vl  level7.vl  level8.vl
res/models/: box.md2  gladiator.md2  hunter.md2  mib.md2  one.md2
sdb-levels/: leveldesign.html
src/: bitmapfont.cpp  enemies.cpp  game.cpp  input.cpp  interface.cpp  level.cpp  levelobjects.cpp  main.cpp  md2.cpp  objects.cpp  player.cpp  weapons.cpp
